--- a/Twitter_EDA.ipynb
+++ b/Twitter_EDA.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNZJQyneBSoEu6eD2Qa66GO",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +16,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Sobiii/MSc_Project-2023/blob/main/Twitter_EDA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "# Importing Twitter dataset"
       ],
@@ -37,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "5Cvp4HNmAxly"
       },
@@ -70,7 +58,7 @@
         "id": "scst76yfBDrq",
         "outputId": "e71a589d-aac3-48b8-c431-c2d0d364c65e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -303,7 +291,7 @@
         "id": "ovbi5SbGBVeI",
         "outputId": "0937a6fd-d8a3-42ad-fadc-a859ba832ae3"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -524,7 +512,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Combining training and testing datasets to form a larger dataset\n",
+        "# Combine training and testing datasets to form a larger dataset\n",
         "twitter_data = pd.concat([twitter_train , twitter_test ])\n",
         "twitter_data"
       ],
@@ -536,7 +524,7 @@
         "id": "MFOm4ySFBdg3",
         "outputId": "02d4da62-1409-4461-a36f-63d0fd30c1c0"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -805,7 +793,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Checking for NaN/missing values in the training data\n",
+        "# Check for NaN/missing values in the training data\n",
         "missing_data = twitter_data.isnull()\n",
         "missing_data= twitter_data[twitter_data.isnull().any(axis=1)]\n",
         "missing_data.head()"
@@ -818,7 +806,7 @@
         "id": "-7afKFuyB5b9",
         "outputId": "daa763dd-3e35-46d0-8289-91634b451924"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1039,7 +1027,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Checking the number of datapoints with missing values\n",
+        "# Check the number of datapoints with missing values\n",
         "print('The number of datapoints with missing values is:',len(missing_data))"
       ],
       "metadata": {
@@ -1049,7 +1037,7 @@
         "id": "JVEdYx5QDLpy",
         "outputId": "1a37226f-b022-470d-ee5e-52931a24d7c1"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1063,7 +1051,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Removing rows with missing data\n",
+        "# Remove rows with missing data\n",
         "twitter_data = pd.concat([twitter_data, missing_data, missing_data]).drop_duplicates(keep=False)\n",
         "twitter_data"
       ],
@@ -1075,7 +1063,7 @@
         "id": "isvd0aSUDLl3",
         "outputId": "b5c2817c-2868-45da-ff4f-851e76904be4"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1353,7 +1341,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Checking whether the data is balanced\n",
+        "# Check whether the data is balanced\n",
         "print('The dataset is already balanced:')\n",
         "twitter_data['class'].value_counts()"
       ],
@@ -1364,7 +1352,7 @@
         "id": "fr_6HVZeDLfF",
         "outputId": "6d3905a8-b577-4b46-e06f-a0e91cf03bff"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1401,7 +1389,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Removing iorony and figurative tweets\n",
+        "# Remove iorony and figurative tweets\n",
         "twitter_data = twitter_data[~twitter_data['class'].isin(['figurative', 'irony'])]\n",
         "twitter_data"
       ],
@@ -1413,7 +1401,7 @@
         "id": "Xd5O5FXLDLbO",
         "outputId": "c95de5ad-27f1-47eb-d8e2-cbc5537a439a"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1709,7 +1697,7 @@
         "id": "lGNTfTOrJcBJ",
         "outputId": "6521ad48-102b-4c64-c2db-2c3482820796"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1785,7 +1773,7 @@
         "id": "ORowg3JbKYCD",
         "outputId": "4524bdee-8af5-4fcb-cdee-b59186d982d7"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1832,7 +1820,7 @@
         "id": "TqhC-AS_KX6x",
         "outputId": "206850ad-da6b-4f25-e200-2f7451b79081"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1860,7 +1848,7 @@
         "id": "PNoOfBb4KXvl",
         "outputId": "b725d527-f30a-473a-ddf0-7102fc4b646d"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2101,7 +2089,7 @@
         "id": "TkLz_M00QxP1",
         "outputId": "f7542080-9d43-468b-95c6-038e58df9baa"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2356,7 +2344,7 @@
         "id": "RWVmUy8OQ_3A",
         "outputId": "ba67cdaf-533b-465c-b0ec-32c049cfdb4c"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2373,7 +2361,6 @@
       "source": [
         "# My Observations:\n",
         "\n",
-        "Based on the given Exploratory Data Analysis (EDA) for a Twitter dataset divided into 'sarcasm' and 'regular' classes, here's a summary of the findings:\n",
         "\n",
         "- The average word count for sarcastic tweets is slightly higher than regular tweets, with mean values being 14.65 and 14.35, respectively. This could imply that sarcastic tweets tend to be a bit wordier than their regular counterparts.\n",
         "\n",
@@ -2435,7 +2422,7 @@
         "id": "g4nCWPJDRooo",
         "outputId": "4a60bf97-6a04-4d42-f0e2-7bff3671e248"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2483,7 +2470,7 @@
         "id": "Q--J_NzAV9Tv",
         "outputId": "866b17e8-f54b-4008-c879-3664810e9da7"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2511,7 +2498,7 @@
         "id": "7yc2oXkbWiQO",
         "outputId": "06eef3c4-66e9-4ab0-a5ae-23ee0ce42f4f"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2780,7 +2767,7 @@
         "id": "3pfSPLpIWiNW",
         "outputId": "9bd2f34b-93a7-4de7-8f03-c15af010ff42"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3049,7 +3036,7 @@
         "id": "ihEG6Px6WiJO",
         "outputId": "bbd9a0b8-7f52-47d6-9606-33cc38dbcfab"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3318,7 +3305,7 @@
         "id": "_gS6E234WiB6",
         "outputId": "ac0c9f9c-eb76-4647-f258-2b450251b9e8"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3603,7 +3590,7 @@
       "metadata": {
         "id": "7D76iN72XLP5"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3620,7 +3607,7 @@
         "id": "UUuGrMQ_X2TE",
         "outputId": "4b2bce65-016f-4739-c1dc-dbffac296c54"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3890,7 +3877,7 @@
         "id": "liBfrv-vX_9o",
         "outputId": "93796718-c762-4006-83ff-37b9955aad68"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4160,7 +4147,7 @@
         "id": "4Yqqrt-AYIpu",
         "outputId": "7e8929da-b012-4679-8436-f3d9762962cf"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4430,7 +4417,7 @@
         "id": "Fr0k2S42YQMG",
         "outputId": "c23936f0-8220-4cd2-e116-60ab3abbba33"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
